Redirect footer informations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "cSpell.words": [
         "compania",
         "Costs",
+        "Linkedin",
+        "noopener",
         "novoprojeto",
-        "savings"
+        "savings",
+        "Whatsapp"
     ]
 }
