--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "Card",
         "compania",
         "Costs",
         "Linkedin",
+        "loader",
         "noopener",
         "novoprojeto",
         "pages",
