--- a/Costs/.vscode/settings.json
+++ b/Costs/.vscode/settings.json
@@ -1,14 +1,5 @@
 {
     "cSpell.words": [
-        "Card",
-        "compania",
-        "Costs",
-        "Linkedin",
-        "loader",
-        "noopener",
-        "novoprojeto",
-        "pages",
-        "savings",
-        "Whatsapp"
+        "uuidv"
     ]
 }
